# course-dl

./: .gitattributes  .gitignore  Homework_1_CV_(Andrey_Goncharov).ipynb  Homework_2_NLP.ipynb  README.md  dl-hw-1-vit-3.ipynb  main.py  pyproject.toml  wavemix_combined.ipynb  wavemix_port_adam_50epoch.ipynb  wavemix_port_stage2_sgd.ipynb  zoobot_convnext_nano_out.ipynb  zoobot_convnext_tiny_out.ipynb  zoobot_convnext_tiny_out2.ipynb  zoobot_convnext_tiny_out3.ipynb  zoobot_convnext_tiny_out4.ipynb  zoobot_convnext_tiny_out5.ipynb  zoobot_convnext_tiny_out6.ipynb  zoobot_in.ipynb  zoobot_out.ipynb
sgd_finetune_stage2_output/checkpoint-500/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
trainer_output/checkpoint-6250/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
wavemix_cmobined/checkpoint-1250/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
