[project]
name = "course-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "numpy>2",
    "papermill>=2.6.0",
    "pywavelets>=1.8.0",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.51.3",
    "wavemix>=0.2.4",
    "zoobot[pytorch]>=2.0.1",
]
